--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,4 @@
 $yellow: #ffde2f;
-
 * {
   padding: 0;
   margin: 0;
@@ -52,3 +51,763 @@ a img {
   position: relative;
 }
 
+
+/* Header */
+
+.header {
+  height: 120px;
+  &-info {
+    float: left;
+    margin-top: 46px;
+    &-item {
+      display: inline-block;
+      &:first-child {
+        margin-right: 53px;
+      }
+      p {
+        line-height: 1.4;
+      }
+    }
+  }
+  &-callback {
+    float: right;
+    background: #ffde2f;
+    transform: skew(-35deg);
+    margin-right: 45px;
+    padding: 38px 50px 30px;
+    height: 100%;
+    &-in {
+      transform: skew(35deg);
+    }
+    a {
+      display: block;
+      padding-bottom: 6px;
+      font-size: 24px;
+      font-weight: 700;
+      text-transform: uppercase;
+      color: #000;
+    }
+  }
+}
+
+.logo {
+  float: left;
+  margin: 28px 50px 0 22px;
+}
+
+
+/* Showcase */
+
+.showcase {
+  font-size: 0;
+  &-wrap {
+    background: url(../images/Showcase-fon.jpg) no-repeat center;
+    background-size: cover;
+    padding-top: 80px;
+    padding-bottom: 30px;
+  }
+  &-item {
+    display: inline-block;
+    vertical-align: top;
+    background: #fff;
+    width: 310px;
+    height: 250px;
+    margin-right: 32px;
+    padding: 0 35px 0 25px;
+    margin-bottom: 30px;
+    border: 4px solid transparent;
+    transition: 300ms;
+    cursor: pointer;
+    &:hover {
+      border: 4px solid #000;
+      background: #ffde2f;
+    }
+    &:nth-child(4n) {
+      margin-right: 0;
+    }
+    &__img {
+      height: 100px;
+      img {
+        display: inline-block;
+        vertical-align: middle;
+      }
+      &:before {
+        content: '';
+        display: inline-block;
+        height: 100%;
+        vertical-align: middle;
+      }
+    }
+    &__head {
+      font-size: 20px;
+      font-weight: 700;
+      text-transform: uppercase;
+      margin-bottom: 18px;
+      line-height: 1.2;
+    }
+    &__text {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 1.5;
+    }
+  }
+}
+
+
+/* Nav */
+
+.nav {
+  text-align: center;
+  font-size: 0;
+  &-wrap {
+    background: #000;
+    background-size: cover;
+  }
+  &__list {
+    display: inline-block;
+    position: relative;
+    &:hover {
+      .nav-sub {
+        visibility: visible;
+        opacity: 1;
+        z-index: 5;
+      }
+      .nav__link {
+        background: #ffde2f;
+        color: #000;
+      }
+    }
+  }
+  &__link {
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fff;
+    padding: 33px 32px 28px;
+    &:hover {
+      background: #ffde2f;
+      color: #000;
+    }
+  }
+  &-sub {
+    text-align: left;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 440px;
+    padding: 10px 20px 22px 35px;
+    background: #ffde2f;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 300ms;
+    z-index: -1;
+    &__link {
+      margin-bottom: 15px;
+      color: #000;
+      font-weight: 700;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+
+/* Products */
+
+.products {
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 37px;
+  &__head {
+    margin: 0 auto;
+    max-width: 990px;
+    margin-bottom: 25px;
+  }
+  span {
+    display: inline-block;
+    margin-bottom: 5px;
+    font-size: 28px;
+    font-weight: 700;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 4;
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 2px;
+      background: #ffde2f;
+      z-index: -1;
+    }
+  }
+  &__caption {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.3;
+    display: block;
+    max-width: 700px;
+    margin: 0 auto;
+    margin-bottom: 18px;
+  }
+  &__descr {
+    display: block;
+    max-width: 940px;
+    margin: 0 auto;
+    line-height: 1.4;
+    margin-bottom: 40px;
+  }
+  &-items {
+    font-size: 0;
+  }
+  &-item {
+    display: inline-block;
+    vertical-align: top;
+    width: 310px;
+    margin-right: 32px;
+    margin-bottom: 29px;
+    transition: 300ms;
+    &:hover .products-item-content {
+      background: #ffde2f;
+      border: 1px solid #ffde2f;
+      border-top: 0;
+    }
+    &:nth-child(4n) {
+      margin-right: 0;
+    }
+    &__img img {
+      vertical-align: bottom;
+    }
+    &-content {
+      border: 1px solid #c2c2c2;
+      border-top: 0;
+      padding-bottom: 27px;
+      height: 140px;
+      transition: 300ms;
+      p {
+        font-size: 16px;
+        font-weight: 400;
+      }
+    }
+    &__head {
+      font-size: 20px;
+      font-weight: 700;
+      text-transform: uppercase;
+      color: #000;
+      padding: 0 40px;
+      line-height: 1.2;
+      height: 65px;
+      margin-top: 23px;
+    }
+  }
+  &__link {
+    border: 2px solid #000;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #000;
+    padding: 18px 17px 15px;
+    transition: 300ms;
+    &:hover {
+      color: #fff;
+      background: #000;
+    }
+  }
+}
+
+
+/* Info */
+
+.info {
+  &-wrap {
+    background: #ffde2f;
+  }
+  &-price {
+    float: left;
+    width: 49%;
+    padding-top: 70px;
+    padding-bottom: 50px;
+    &__head {
+      font-size: 28px;
+      font-weight: 700;
+      text-transform: uppercase;
+      padding-bottom: 30px;
+    }
+    &__text {
+      line-height: 1.3;
+      margin-bottom: 32px;
+    }
+    &-content {
+      text-align: center;
+      border: 6px solid #000;
+      display: inline-block;
+      padding: 24px 75px 26px 70px;
+      p {
+        font-size: 20px;
+      }
+    }
+    &__tel {
+      background: url(../images/info-tel-img.png) no-repeat left center;
+      font-size: 42px;
+      font-weight: 700;
+      line-height: 1.3;
+      color: #000;
+      padding-left: 40px;
+    }
+  }
+  &-deliver {
+    float: right;
+    width: 43%;
+    margin-top: 36px;
+    background: #fff;
+    position: relative;
+    &:before {
+      content: '';
+      display: block;
+      background: url(../images/info-triagle.png) repeat-x center;
+      height: 9px;
+      width: 100%;
+      position: absolute;
+      top: -7px;
+      left: 0;
+    }
+    &__head {
+      font-size: 28px;
+      font-weight: 700;
+      text-transform: uppercase;
+      padding: 33px 20px 20px 40px;
+      line-height: 1.3;
+    }
+    &__caption {
+      font-size: 20px;
+      padding-left: 100px;
+      padding-right: 160px;
+      line-height: 1.3;
+      position: relative;
+      &:before {
+        content: '';
+        display: block;
+        width: 45px;
+        height: 2px;
+        background: #ffde2f;
+        position: absolute;
+        top: 12px;
+        left: 40px;
+      }
+    }
+  }
+}
+
+
+/* Partners */
+
+.partners {
+  padding-top: 50px;
+  &-wrap {
+    background: #f5f5f5;
+  }
+  &-cause {
+    float: left;
+    width: 45%;
+    span {
+      display: inline-block;
+      margin-bottom: 5px;
+      font-size: 42px;
+      font-weight: 700;
+      text-transform: uppercase;
+      position: relative;
+      z-index: 4;
+      &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 2px;
+        background: #ffde2f;
+        z-index: -1;
+      }
+      &:last-child {
+        font-size: 28px;
+        margin-bottom: 55px;
+      }
+    }
+    li {
+      padding-left: 40px;
+      font-size: 20px;
+      font-weight: 700;
+      text-transform: uppercase;
+      padding-bottom: 30px;
+      position: relative;
+      line-height: 1.3;
+      &:before {
+        content: '';
+        display: block;
+        background: url(../images/partners-arrow.png) no-repeat center;
+        width: 17px;
+        height: 15px;
+        position: absolute;
+        top: 1px;
+        left: 8px;
+      }
+    }
+  }
+  &-connect {
+    float: right;
+    width: 49%;
+    span {
+      display: inline-block;
+      margin-bottom: 5px;
+      font-size: 42px;
+      font-weight: 700;
+      text-transform: uppercase;
+      position: relative;
+      z-index: 4;
+      &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 2px;
+        background: #ffde2f;
+        z-index: -1;
+      }
+      &:last-child {
+        font-size: 28px;
+        margin-bottom: 55px;
+      }
+    }
+  }
+  &-logos {
+    font-size: 0;
+    &-item {
+      display: inline-block;
+      width: 20%;
+      margin-bottom: 25px;
+    }
+  }
+}
+
+
+/* Main news */
+
+.main {
+  &-new {
+    border-top: 1px solid #959595;
+    border-bottom: 1px solid #959595;
+    padding-top: 45px;
+    padding-bottom: 60px;
+  }
+  &-news {
+    &__head {
+      font-size: 28px;
+      font-weight: 700;
+      text-transform: uppercase;
+      margin-bottom: 30px;
+      span {
+        color: #000;
+        font-size: 16px;
+        font-weight: 400;
+      }
+      a {
+        color: #007dc5;
+        font-size: 16px;
+        font-weight: 400;
+        text-decoration: underline;
+        text-transform: none;
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
+    &-items {
+      font-size: 0;
+    }
+    &_item {
+      display: inline-block;
+      width: 33.33%;
+      &__img {
+        float: left;
+      }
+    }
+    &-content {
+      float: right;
+      width: 220px;
+      &__time {
+        font-size: 16px;
+        font-weight: 400;
+        text-transform: uppercase;
+        padding-bottom: 24px;
+        padding-top: 5px;
+      }
+      &__head {
+        font-size: 20px;
+        font-weight: 700;
+        margin-bottom: 28px;
+      }
+      &__link {
+        color: #007dc5;
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+
+/* Contacts */
+
+.contacts {
+  &-wrap {
+    background: #f5f5f5;
+    padding-top: 40px;
+    padding-bottom: 43px;
+  }
+  &-in {
+    float: left;
+    width: 48%;
+  }
+  &__head {
+    display: inline-block;
+    margin-bottom: 30px;
+    font-size: 28px;
+    font-weight: 700;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 4;
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 2px;
+      background: #ffde2f;
+      z-index: -1;
+    }
+  }
+  &-items {
+    padding-bottom: 30px;
+  }
+  &-item {
+    display: inline-block;
+    &:first-child {
+      margin-right: 80px;
+    }
+    &__tel {
+      font-size: 28px;
+      font-weight: 700;
+      color: #000;
+    }
+    &__address {
+      font-size: 24px;
+      font-weight: 700;
+    }
+    span {
+      display: block;
+      padding-bottom: 10px;
+      a {
+        color: #0095da;
+        text-decoration: underline;
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
+    &-map {
+      height: 430px;
+      iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+      }
+    }
+  }
+}
+
+.form {
+  float: right;
+  width: 49%;
+  font-size: 0;
+  &__head {
+    display: inline-block;
+    margin-bottom: 30px;
+    font-size: 28px;
+    font-weight: 700;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 4;
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 2px;
+      background: #ffde2f;
+      z-index: -1;
+    }
+  }
+  &__caption {
+    padding-bottom: 22px;
+    font: 400 16px 'Pragmatica';
+  }
+  &__input {
+    input,
+    textarea {
+      width: 100%;
+    }
+    textarea {
+      resize: none;
+    }
+    &_min {
+      input {
+        width: 47%;
+        &:first-child {
+          margin-right: 6%;
+        }
+      }
+    }
+  }
+  input,
+  textarea {
+    font: 400 16px/50px 'Pragmatica';
+    margin-bottom: 25px;
+    padding: 0 20px;
+  }
+  textarea {
+    height: 250px;
+    line-height: 1.4;
+    padding-top: 20px;
+  }
+  button {
+    font: 700 16px/46px 'Pragmatica';
+    text-transform: uppercase;
+    padding: 0 100px;
+    background: #ffde2f;
+    border: 2px solid #000;
+    cursor: pointer;
+    transition: 300ms;
+    &:hover {
+      background: #fbd300;
+      border: 2px solid #fbd300;
+    }
+  }
+}
+
+input::-webkit-input-placeholder {
+  color: #000;
+}
+
+input:-moz-placeholder {
+  color: #000;
+}
+
+input::-moz-placeholder {
+  color: #000;
+}
+
+input:-ms-input-placeholder {
+  color: #000;
+}
+
+textarea::-webkit-input-placeholder {
+  color: #000;
+}
+
+textarea:-moz-placeholder {
+  color: #000;
+}
+
+textarea::-moz-placeholder {
+  color: #000;
+}
+
+textarea:-ms-input-placeholder {
+  color: #000;
+}
+
+
+/* Footer */
+
+.footer {
+  &-wrap {
+    background: #000;
+  }
+  &-logo {
+    float: left;
+    max-width: 26%;
+    margin: 30px 0 26px 20px;
+    img {
+      margin-bottom: 18px;
+    }
+  }
+  &-copy {
+    color: #f5f5f5;
+    line-height: 1.4;
+    padding-bottom: 8px;
+    font-size: 14px;
+  }
+  &-info {
+    margin-left: 456px;
+    display: block;
+  }
+  &-nav {
+    
+    ul {
+      padding-top: 48px;
+      padding-bottom: 45px;
+    }
+    li {
+      display: inline-block;
+      margin-right: 36px;
+      &:last-child {
+        margin-right: 0;
+      }
+      a {
+        color: #ffde2f;
+        font-weight: 700;
+        text-transform: uppercase;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+  &-contacts {
+    &-item {
+      display: inline-block;
+      margin-right: 96px;
+      &:last-child {
+        margin-right: 0;
+        color: #f5f5f5;
+      }
+      p {
+        color: #fff;
+        padding-bottom: 10px;
+      }
+      a {
+        font-size: 20px;
+        font-weight: 700;
+        color: #f5f5f5;
+      }
+    }
+  }
+}
+
+.omg {
+  float: right;
+  font-size: 14px;
+  color: #f5f5f5;
+  margin-top: 28px;
+  a {
+    color: #ffde2f;
+    font-size: 14px;
+  }
+}
