--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@ $yellow: #ffde2f;
 
 body {
   font: 400 16px 'Pragmatica', sans-serif;
+  background: #f5f5f5;
 }
 
 a {
@@ -100,11 +101,11 @@ a img {
 
 .showcase {
   font-size: 0;
+  padding-top: 80px;
+  padding-bottom: 30px;
   &-wrap {
     background: url(../images/Showcase-fon.jpg) no-repeat center;
     background-size: cover;
-    padding-top: 80px;
-    padding-bottom: 30px;
   }
   &-item {
     display: inline-block;
@@ -634,6 +635,9 @@ a img {
   float: right;
   width: 49%;
   font-size: 0;
+  form {
+    text-align: right;
+  }
   &__head {
     display: inline-block;
     margin-bottom: 30px;
@@ -662,9 +666,27 @@ a img {
     input,
     textarea {
       width: 100%;
+      font: 400 16px/50px 'Pragmatica';
+      margin-bottom: 25px;
+      padding: 0 20px;
+      &::-webkit-input-placeholder {
+        color: #000;
+      }
+      &:-moz-placeholder {
+        color: #000;
+      }
+      &::-moz-placeholder {
+        color: #000;
+      }
+      &:-ms-input-placeholder {
+        color: #000;
+      }
     }
     textarea {
       resize: none;
+      height: 250px;
+      line-height: 1.4;
+      padding-top: 20px;
     }
     &_min {
       input {
@@ -674,17 +696,6 @@ a img {
         }
       }
     }
-  }
-  input,
-  textarea {
-    font: 400 16px/50px 'Pragmatica';
-    margin-bottom: 25px;
-    padding: 0 20px;
-  }
-  textarea {
-    height: 250px;
-    line-height: 1.4;
-    padding-top: 20px;
   }
   button {
     font: 700 16px/46px 'Pragmatica';
@@ -699,38 +710,6 @@ a img {
       border: 2px solid #fbd300;
     }
   }
-}
-
-input::-webkit-input-placeholder {
-  color: #000;
-}
-
-input:-moz-placeholder {
-  color: #000;
-}
-
-input::-moz-placeholder {
-  color: #000;
-}
-
-input:-ms-input-placeholder {
-  color: #000;
-}
-
-textarea::-webkit-input-placeholder {
-  color: #000;
-}
-
-textarea:-moz-placeholder {
-  color: #000;
-}
-
-textarea::-moz-placeholder {
-  color: #000;
-}
-
-textarea:-ms-input-placeholder {
-  color: #000;
 }
 
 
@@ -759,7 +738,6 @@ textarea:-ms-input-placeholder {
     display: block;
   }
   &-nav {
-    
     ul {
       padding-top: 48px;
       padding-bottom: 45px;
@@ -811,3 +789,244 @@ textarea:-ms-input-placeholder {
     font-size: 14px;
   }
 }
+
+
+/* Burger */
+
+.burger-wrap {
+  display: none;
+  width: 30px;
+}
+
+.burger-wrap a {
+  cursor: pointer;
+  padding: 12px 0;
+  display: block;
+}
+
+.burger-wrap a span {
+  position: relative;
+  display: block;
+  width: 30px;
+  height: 5px;
+  border-radius: 7px;
+  background: #fff;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.burger-wrap a span:before,
+.burger-wrap a span:after {
+  position: absolute;
+  background: #fff;
+  content: '';
+  width: 30px;
+  height: 5px;
+  left: 0;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  border-radius: 7px;
+}
+
+.burger-wrap a span:before {
+  top: -8px;
+}
+
+.burger-wrap a span:after {
+  top: 8px;
+}
+
+.burger-wrap a.active span {
+  background: transparent;
+}
+
+.burger-wrap a.active span:before {
+  -webkit-transform: rotate(45deg) translate(5px, 6px);
+  transform: rotate(45deg) translate(5px, 6px);
+}
+
+a.active span:after {
+  -webkit-transform: rotate(-45deg) translate(5px, -6px);
+  transform: rotate(-45deg) translate(5px, -6px);
+}
+
+
+/* Bread */
+
+.bread {
+  padding-top: 17px;
+  padding-bottom: 20px;
+  li {
+    display: inline-block;
+    margin-right: 24px;
+    font-size: 14px;
+    position: relative;
+    &:after {
+      content: '>';
+      display: block;
+      position: absolute;
+      top: 1px;
+      right: -18px;
+    }
+    &:last-child:after {
+      display: none;
+    }
+    a {
+      color: #0095da;
+      text-decoration: underline;
+      font-size: 14px;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+
+/* Product */
+
+.sidebar {
+  float: left;
+  width: 290px;
+  margin-bottom: 66px;
+  &-nav {
+    margin-bottom: 77px;
+    &-item {
+      padding: 20px;
+      border-bottom: 1px solid #c2c2c2;
+      &:last-child {
+        border-bottom: none;
+      }
+      &__head {
+        display: block;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #000;
+        padding-top: 15px;
+        padding-bottom: 10px;
+        line-height: 1.3;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+      &-links {
+        margin-top: 10px;
+        a {
+          color: #000;
+          padding-bottom: 10px;
+          margin-left: 20px;
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+      &.active {
+        background: #ffde2f;
+      }
+    }
+  }
+}
+
+.content {
+  float: right;
+  width: 994px;
+}
+
+.product {
+  &__head {
+    text-transform: uppercase;
+    font-size: 28px;
+    font-weight: 700;
+    padding-top: 23px;
+    padding-bottom: 32px;
+  }
+  &-info {
+    margin-bottom: 48px;
+    img {
+      float: left;
+    }
+    &-content {
+      margin-left: 342px;
+    }
+    &-header {
+      position: relative;
+      margin-bottom: 45px;
+      span {
+        display: block;
+        padding-top: 4px;
+        padding-bottom: 8px;
+      }
+      p {
+        font-size: 24px;
+        font-weight: 700;
+      }
+      a {
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #000;
+        border: 2px solid #000;
+        padding: 18px 47px 15px;
+        position: absolute;
+        top: 0;
+        right: 170px;
+        transition: 300ms;
+        &:hover {
+          background: #000;
+          color: #fff;
+        }
+      }
+    }
+  }
+  &-table {
+    tr {
+      td {
+        padding-bottom: 15px;
+        &:first-child {
+          width: 180px;
+        }
+      }
+    }
+  }
+  &-content {
+    border-bottom: 1px solid #959595;
+    p {
+      margin-bottom: 40px;
+      line-height: 1.6;
+    }
+  }
+  &-more {
+    padding-top: 30px;
+    &__head {
+      font-size: 20px;
+      font-weight: 700;
+      text-transform: uppercase;
+      padding-bottom: 30px;
+    }
+    &-items {
+      font-size: 0;
+      text-align: center;
+    }
+    &-items .products-item {
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
