--- a/css/style.css
+++ b/css/style.css
@@ -803,4 +803,21 @@ a.active span:after {
   .product-more-items .products-item:last-child {
     margin-right: 0; }
 
+/* catalog */
+.catalog__head {
+  font-size: 28px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 36px; }
+
+.catalog__caption {
+  line-height: 1.3;
+  margin-bottom: 70px; }
+
+.catalog-item__img {
+  width: 310px; }
+
+.catalog-item__head {
+  width: 480px; }
+
 /*# sourceMappingURL=style.css.map */
