--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1014,7 +1014,31 @@ a.active span:after {
   }
 }
 
+/* catalog */
 
+.catalog {
+  &__head {
+    font-size: 28px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 36px;
+  }
+  &__caption {
+    line-height: 1.3;
+    margin-bottom: 70px;
+  }
+  &-items {
+    
+  }
+  &-item {
+    &__img {
+      width: 310px;
+    }
+    &__head {
+      width: 480px;
+    }
+  }
+}
 
 
 
