--- a/css/style.css
+++ b/css/style.css
@@ -812,12 +812,28 @@ a.active span:after {
 
 .catalog__caption {
   line-height: 1.3;
-  margin-bottom: 70px; }
+  margin-bottom: 34px; }
 
-.catalog-item__img {
-  width: 310px; }
-
-.catalog-item__head {
-  width: 480px; }
+.catalog-item {
+  border-top: 1px solid #959595;
+  padding-top: 36px; }
+  .catalog-item__img {
+    width: 310px; }
+  .catalog-item__content {
+    width: 480px;
+    padding: 0 32px; }
+  .catalog-item__head {
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-bottom: 37px; }
+  .catalog-item__text {
+    line-height: 1.6; }
+  .catalog-item-price {
+    width: 196px; }
+    .catalog-item-price span {
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 1.6; }
 
 /*# sourceMappingURL=style.css.map */
