--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1025,17 +1025,37 @@ a.active span:after {
   }
   &__caption {
     line-height: 1.3;
-    margin-bottom: 70px;
+    margin-bottom: 34px;
   }
   &-items {
     
   }
   &-item {
+    border-top: 1px solid #959595;
+    padding-top: 36px;
     &__img {
       width: 310px;
     }
-    &__head {
+    &__content {
       width: 480px;
+      padding: 0 32px;
+    }
+    &__head {
+      font-size: 20px;
+      font-weight: 700;
+      text-transform: uppercase;
+      padding-bottom: 37px;
+    }
+    &__text {
+      line-height: 1.6;
+    }
+    &-price {
+      width: 196px;
+      span {
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 1.6;
+      }
     }
   }
 }
