--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1014,6 +1014,7 @@ a.active span:after {
   }
 }
 
+
 /* catalog */
 
 .catalog {
@@ -1027,12 +1028,14 @@ a.active span:after {
     line-height: 1.3;
     margin-bottom: 34px;
   }
-  &-items {
-    
-  }
+  &-items {}
   &-item {
     border-top: 1px solid #959595;
-    padding-top: 36px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    &:last-child {
+      border-bottom: 1px solid #959595;
+    }
     &__img {
       width: 310px;
     }
@@ -1044,7 +1047,7 @@ a.active span:after {
       font-size: 20px;
       font-weight: 700;
       text-transform: uppercase;
-      padding-bottom: 37px;
+      padding-bottom: 40px;
     }
     &__text {
       line-height: 1.6;
@@ -1060,17 +1063,35 @@ a.active span:after {
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.pagination {
+  text-align: center;
+  margin-top: 46px;
+  ul {
+    display: inline-block;
+    border: 1px solid #959595; 
+    li {
+      display: inline-block;
+      border-right: 1px solid #959595;
+      &:last-child {
+        border-right: none;
+      }
+      a {
+        line-height: 35px;
+        padding: 0 12px;
+        color: #737373;
+        transition: 300ms;
+        &:hover {
+          background: #737373;
+          color: #fff;
+        }
+        &.active {
+          color: #000;
+          &:hover {
+            background: #fff;
+            color: #000;
+          }
+        }
+      }
+    }
+  }
+}
