--- a/css/media.css
+++ b/css/media.css
@@ -86,6 +86,29 @@
     margin: 0 auto 20px !important;
     display: block;
   }
+  
+  .catalog-item__img {
+    width: 250px;
+  }
+  .catalog-item__content {
+    width: 292px;
+    padding: 0px 14px;
+  }
+  .catalog-item__head {
+    font-size: 16px;
+    padding-bottom: 20px;
+  }
+  .catalog-item__text {
+    line-height: 1.1;
+    font-size: 14px;
+  }
+  .catalog-item-price {
+    width: 132px;
+  }
+  .catalog-item-price span {
+    line-height: 1.3;
+    font-size: 16px;
+  }
 }
 
 @media only screen and (max-width: 991px) {
@@ -172,6 +195,10 @@
   }
   .sidebar-nav {
     margin-bottom: 35px;
+  }
+  
+  .catalog-item {
+    margin: 0 auto !important;
   }
 }
 
@@ -326,6 +353,23 @@
   .product-table {
     margin: 0 auto;
   }
+  
+  .catalog-item {
+    text-align: center;
+  }
+  .catalog-item tr td {
+    display: block;
+  }
+  .catalog-item__head {
+    padding-top: 20px;
+  }
+  .catalog-item-price {
+    width: auto;
+    padding-top: 20px;
+  }
+  .pagination {
+    margin-bottom: 40px;
+  }
 }
 
 @media only screen and (max-width: 450px) {
@@ -422,4 +466,6 @@
   .product-table tr td:first-child {
     width: 80px;
   }
+  
+  
 }
