--- a/css/style.css
+++ b/css/style.css
@@ -850,13 +850,13 @@ a.active span:after {
       width: 34px;
       display: inline-block;
       border-right: 1px solid #959595;
-      font: 400 16px 'Pragmatica'; }
+      font: 400 16px 'Pragmatica';
+      line-height: 35px; }
       .pagination ul li:last-child {
         border-right: none; }
       .pagination ul li a {
         width: 100%;
         line-height: 35px;
-        padding: 0 12px;
         color: #737373;
         transition: 300ms; }
         .pagination ul li a:hover {
