--- a/scss/style.scss
+++ b/scss/style.scss
@@ -102,7 +102,7 @@ a img {
 .showcase {
   font-size: 0;
   padding-top: 80px;
-  padding-bottom: 30px;
+  padding-bottom: 25px;
   &-wrap {
     background: url(../images/Showcase-fon.jpg) no-repeat center;
     background-size: cover;
@@ -143,7 +143,7 @@ a img {
       font-size: 20px;
       font-weight: 700;
       text-transform: uppercase;
-      margin-bottom: 18px;
+      margin-bottom: 16px;
       line-height: 1.2;
     }
     &__text {
@@ -219,7 +219,7 @@ a img {
 .products {
   text-align: center;
   padding-top: 50px;
-  padding-bottom: 37px;
+  padding-bottom: 34px;
   &__head {
     margin: 0 auto;
     max-width: 990px;
@@ -263,6 +263,7 @@ a img {
   }
   &-items {
     font-size: 0;
+    margin-bottom: 7px;
   }
   &-item {
     display: inline-block;
@@ -328,7 +329,7 @@ a img {
   &-price {
     float: left;
     width: 49%;
-    padding-top: 70px;
+    padding-top: 68px;
     padding-bottom: 50px;
     &__head {
       font-size: 28px;
@@ -344,7 +345,7 @@ a img {
       text-align: center;
       border: 6px solid #000;
       display: inline-block;
-      padding: 24px 75px 26px 70px;
+      padding: 30px 83px 30px 70px;
       p {
         font-size: 20px;
       }
@@ -378,7 +379,7 @@ a img {
       font-size: 28px;
       font-weight: 700;
       text-transform: uppercase;
-      padding: 33px 20px 20px 40px;
+      padding: 33px 20px 12px 40px;
       line-height: 1.3;
     }
     &__caption {
@@ -433,7 +434,7 @@ a img {
       }
       &:last-child {
         font-size: 28px;
-        margin-bottom: 55px;
+        margin-bottom: 50px;
       }
     }
     li {
@@ -502,14 +503,17 @@ a img {
     border-top: 1px solid #959595;
     border-bottom: 1px solid #959595;
     padding-top: 45px;
-    padding-bottom: 60px;
+    padding-bottom: 55px;
   }
   &-news {
+    &-wrap {
+      background: #fff;
+    }
     &__head {
       font-size: 28px;
       font-weight: 700;
       text-transform: uppercase;
-      margin-bottom: 30px;
+      margin-bottom: 33px;
       span {
         color: #000;
         font-size: 16px;
@@ -888,7 +892,6 @@ a.active span:after {
 .sidebar {
   float: left;
   width: 290px;
-  margin-bottom: 66px;
   &-nav {
     margin-bottom: 77px;
     &-item {
@@ -898,7 +901,7 @@ a.active span:after {
         border-bottom: none;
       }
       &__head {
-        display: block;
+        display: inline-block;
         font-weight: 700;
         text-transform: uppercase;
         color: #000;
@@ -989,8 +992,9 @@ a.active span:after {
   }
   &-content {
     border-bottom: 1px solid #959595;
+    
     p {
-      margin-bottom: 40px;
+      margin-bottom: 36px;
       line-height: 1.6;
     }
   }
@@ -1047,7 +1051,8 @@ a.active span:after {
       font-size: 20px;
       font-weight: 700;
       text-transform: uppercase;
-      padding-bottom: 40px;
+      padding-bottom: 28px;
+      line-height: 1.3;
     }
     &__text {
       line-height: 1.6;
@@ -1066,6 +1071,7 @@ a.active span:after {
 .pagination {
   text-align: center;
   margin-top: 46px;
+  margin-bottom: 53px;
   font-size: 0;
   ul {
     display: inline-block;
@@ -1096,6 +1102,92 @@ a.active span:after {
           }
         }
       }
+    }
+  }
+}
+
+/* Contact */
+
+.contacts_page {
+  .contacts__head:before {
+    display: none;
+  }
+  .form__head:before {
+    display: none;
+  }
+  .form button {
+    background: #f5f5f5;
+    &:hover {
+      background: #000;
+      color: #fff;
+      border-color: #000;
+    }
+  }
+}
+
+.contacts-content {
+  padding-top: 55px;
+  p {
+    padding-bottom: 30px;
+    line-height: 1.6;
+  }
+}
+
+/* News */
+
+.main-news__inner {
+  .main-new {
+    border: none;
+    padding-top: 20px;
+    padding-bottom: 0;
+  }
+  .main-news_item {
+    margin-bottom: 55px;
+  }
+  .pagination {
+    margin-top: 0;
+  }
+}
+
+/* Article */
+
+.article {
+  &-content {
+    float: left;
+    width: 74%;
+    &__head {
+      font-size: 28px;
+      font-weight: 700;
+      text-transform: uppercase;
+      padding-bottom: 25px;
+      line-height: 1.3;
+    }
+    img {
+      padding-bottom: 25px;
+    }
+    p {
+      padding-bottom: 35px;
+      line-height: 1.4;
+    }
+  }
+  &-sidebar {
+    float: right;
+    
+  }
+  &__news {
+    border-top: 1px solid #959595;
+    margin-top: 20px;
+    padding-top: 42px;
+    padding-bottom: 66px;
+  }
+}
+
+/* Article2 */
+
+.article2_content {
+  p {
+    &:last-child {
+      margin-bottom: 22px;
     }
   }
 }
